2015-Apr-30 ddamiani    Tag V08-02-07.  Added BldDataAnalogInputV1. Derived from psddldata V01-00-27.
2015-Mar-03 caf         Tag V08-02-06.  Fix bug that prevented indexer from recognizing EvrData::DataV4.
2015-Feb-26 weaver	Tag V08-02-05.  Change XtcMonitorServer to reject connections from extra clients.
2015-Feb-20 caf         Tag V08-02-04.  Adds EvrData::DataV4.  Derived from psddldata V01-00-26.
2014-Nov-25 cpo		Tag V08-01-11.  Add const accessor to IndexList.hh to allow software to convert eventcode-bits to actual event-codes.
2014-Nov-25 weaver	Tag V08-01-10.  Added Quartz::ConfigV2 for hw ROI.
2014-Nov-18 weaver	Tag V08-01-09.  Added TimeTool::ConfigV2,DataV2.  Fix to XtcMonitorServer for slow clients.
2014-Oct-14 weaver	Tag V08-01-07.  Added BldDataSpectrometerV1.
2014-Oct-13 weaver	Tag V08-01-06.  Added Epix100a, built with ddl 'devel' tag.
2014-Oct-05 jana	Tag V08-01-05.  Adds some XCS BLD IPIMBs to BldInfo and latest changes to epix.ddl excluding epix100a and elementV2.  Derived from psddldata V01-00-16.
2014-Oct-01 weaver      Tag V08-01-04.  Adds EvrData::IOConfigV2.  Derived from psddldata V01-00-15.
			Tag V08-01-03.  Adds TimeTool::DataV1.
2014-Sep-15 weaver	Tag V08-01-02.  Derived from psddldata V01-00-13.  Adds TimeTool config and GenericPgp config types.
					Adds L3T::DataV2 type with unbiased selection flag, also in L1AcceptEnv.
2014-Sep-08 cpo 	Tag V08-01-01.  Tomy and Chris move pragma-pack in index/IndexList.hh
                                        to avoid bug in std:map<int,int> that caused
                                        cctbx crystallography software to crash
2014-Aug-13 weaver	Tag V08-01-00.  Change to L3TModule interface to supply configuration information.
2014-Jul-31 weaver	Updated xtcmonserver to cleanup message queues.
2014-Jul-03 jana	Tag V08-00-12	Added support for ebeam BLD v6 to app/*reader.cc.  Uses psddldata V01-00-12.