@@ -1,3 +1,4 @@
+2016-Feb-04 ddamiani    Tag V08-06-00.  Added ConfigV1 and FrameV1 for multi-ccd Andor cameras. Derived from psddldata V01-00-36.
 2015-Apr-30 ddamiani    Tag V08-02-07.  Added BldDataAnalogInputV1. Derived from psddldata V01-00-27.
 2015-Mar-03 caf         Tag V08-02-06.  Fix bug that prevented indexer from recognizing EvrData::DataV4.
 2015-Feb-26 weaver	Tag V08-02-05.  Change XtcMonitorServer to reject connections from extra clients.
